<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.jakelcode.schedule.EditActivity">

    <include layout="@layout/include_toolbar_long"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="30sp"
            app:baseColor="@android:color/white"
            app:floatingLabel="highlight"
            app:maxCharacters="40"
            app:primaryColor="?colorAccent"
            app:singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="24sp"
            app:baseColor="@android:color/white"
            app:floatingLabel="highlight"
            app:primaryColor="?colorAccent"
            app:singleLineEllipsis="true"/>
    </LinearLayout>

    <!-- Below toolbar-->

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="232dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/spacing_medium"
            app:baseColor="@android:color/black"
            app:floatingLabel="highlight"
            app:primaryColor="?colorAccent"
            app:singleLineEllipsis="true"/>


        <!-- Layout for start / end time -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_time_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/start_time"
                android:textSize="18sp"
                android:layout_weight="1"
                app:baseColor="@android:color/black"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent"
                android:focusable="false"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_time_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/end_time"
                android:textSize="18sp"
                android:layout_weight="1"
                app:baseColor="@android:color/black"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent"
                android:focusable="false"
                />

        </LinearLayout>

        <!-- layout for start / end term -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:weightSum="2"
            >
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_term_start_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_term"
                android:textSize="18sp"
                android:layout_weight="1"
                app:baseColor="@android:color/black"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent"
                android:focusable="false"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_term_end_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_term"
                android:textSize="18sp"
                android:layout_weight="1"
                app:baseColor="@android:color/black"
                app:floatingLabel="highlight"
                app:primaryColor="?colorAccent"
                android:focusable="false"
                />
        </LinearLayout>

        <!-- Layout for repeating days -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:weightSum="7"
            >
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_sun"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_sunday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_m"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_monday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_t"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_tuesday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_w"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_wednesday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_th"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_thursday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_f"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_friday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
            <org.jakelcode.schedule.ui.CheckableButton
                android:id="@+id/edit_days_sat"
                android:layout_width="@dimen/button_width_small"
                android:layout_height="wrap_content"
                android:text="@string/short_saturday"
                android:textSize="@dimen/text_size_small"
                android:background="@drawable/edit_day_button"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
